# keyple-cpp-example

./: CMakeLists.txt  NOTICE.md  README.md
Example_Card_Calypso/: CMakeLists.txt
Example_Card_Calypso/src/main/UseCase10_SessionTrace_TN313/: CardReaderObserver.cpp  CardReaderObserver.h  Main_SessionTrace_TN313_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase11_DataSigning/: Main_DataSigning_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase12_PerformanceMeasurement_EmbeddedValidation/: Main_PerformanceMeasurement_EmbeddedValidation_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase13_PerformanceMeasurement_DistributedReloading/: Main_PerformanceMeasurement_DistributedReloading_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase1_ExplicitSelectionAid/: Main_ExplicitSelectionAid_Pcsc.cpp  Main_ExplicitSelectionAid_Stub.cpp
Example_Card_Calypso/src/main/UseCase2_ScheduledSelection/: CardReaderObserver.cpp  CardReaderObserver.h  Main_ScheduledSelection_Pcsc.cpp  Main_ScheduledSelection_Stub.cpp
Example_Card_Calypso/src/main/UseCase3_Rev1Selection/: Main_Rev1Selection_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase4_CardAuthentication/: Main_CardAuthentication_Pcsc.cpp  Main_CardAuthentication_Pcsc_SamResourceService.cpp  Main_CardAuthentication_Stub.cpp
Example_Card_Calypso/src/main/UseCase5_MultipleSession/: Main_MultipleSession_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase6_VerifyPin/: Main_VerifyPin_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase7_StoredValue_SimpleReload/: Main_StoredValue_SimpleReload_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase7_StoredValue_SimpleReloading/: Main_StoredValue_SimpleReloading_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase8_StoredValue_DebitInSession/: Main_StoredValue_DebitInSession_Pcsc.cpp
Example_Card_Calypso/src/main/UseCase9_ChangePin/: Main_ChangePin_Pcsc.cpp
Example_Card_Calypso/src/main/common/: CalypsoConstants.cpp  CalypsoConstants.h  ConfigurationUtil.cpp  ConfigurationUtil.h  StubSmartCardFactory.cpp  StubSmartCardFactory.h
Example_Plugin_PCSC/: CMakeLists.txt
Example_Plugin_PCSC/src/main/UseCase1_ReaderTypeAutoIdentification/: Main_ReaderTypeAutoIdentification_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase2_ExplicitReaderType/: Main_ExplicitReaderType_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase3_ChangeProtocolRules/: Main_ChangeProtocolRules_Pcsc.cpp
Example_Plugin_PCSC/src/main/UseCase4_TransmitControl/: Main_TransmitControl_Pcsc.cpp
Example_Service/: CMakeLists.txt
Example_Service/src/main/UseCase1_BasicSelection/: Main_BasicSelection_Pcsc.cpp
Example_Service/src/main/UseCase2_ProtocolBasedSelection/: Main_ProtocolBasedSelection_Pcsc.cpp
Example_Service/src/main/UseCase3_AidBasedSelection/: Main_AidBasedSelection_Pcsc.cpp
Example_Service/src/main/UseCase4_ScheduledSelection/: CardReaderObserver.cpp  CardReaderObserver.h  Main_ScheduledSelection_Pcsc.cpp
Example_Service/src/main/UseCase5_SequentialMultiSelection/: Main_SequentialMultiSelection_Pcsc.cpp
Example_Service/src/main/UseCase6_GroupedMultiSelection/: Main_GroupedMultiSelection_Pcsc.cpp
Example_Service/src/main/UseCase7_PluginAndReaderObservation/: Main_PluginAndReaderObservation_Pcsc.cpp  PluginObserver.cpp  PluginObserver.h  ReaderObserver.cpp  ReaderObserver.h
Example_Service/src/main/common/: ConfigurationUtil.cpp  ConfigurationUtil.h
Example_Service_Resource/: CMakeLists.txt
Example_Service_Resource/src/main/UseCase1_CardResourceService/: Main_CardResourceService_Stub.cpp
